lwc_survey_dynamic_responses/force-app/main/default/objects/Responses__c/Responses__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <label>Responses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>