lwc_survey_dynamic_responses/force-app/main/default/objects/Responses__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Used to score the survey based on the response</description>
    <inlineHelpText>Enter the response score eg 1,0.5 etc to capture score for the response</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>