lwc_survey_dynamic_responses/force-app/main/default/objects/Responses__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>captures for selection of the response in the survey</description>
    <inlineHelpText>Selected from the lwc component on survey object</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>